2007-12-14  Stuart Brorson (sdb@cloud9.net)
	* src/callbacks.c, src/render.c:  Added "General" tab to reports 
	windows for both Gerbers and Drills.
	* src/Makefile.am, src/drill.c, src/gerb_image.h,
	src/gerb_stats.[hc], src/drill_stats.[hc]:  Refactor drill_stats
	stuff to its own files in accordance with our function naming 
	scheme.

2007-12-14  Stuart Brorson (sdb@cloud9.net)
	* Too many files to mention:  Start adding list of drills found 
	to drill statistics reported.  Now "analyze->active drill layers"
	reports each drill defined, and the number of times it is used.
	
2007-12-14  Julian Lamb
	* render,callbacks: Fully separate GDK and cairo rendering code to help
	  speed analization. Change from storing intermediate cairo patterns to
	  xlib surfaces for speed improvement. Eliminate image compositing on
	  each expose_event in order to make panning feel much quicker.
	  Temporarily disable idle function to fix GDK memory leaks and crashes.
	  
2007-12-12  Julian Lamb
	* src/gerbv.c: Fix half of bug #1443885 by eliminating segfault when
	  project file has layer files that won't load.
	* src/callbacks.[ch],src/interface.c,src/render.[ch]: Big
	  cleanup of callbacks.c and start moving zoom code to render.c in
	  preparation for separating out zoom info from screen struct (allowing
	  for exporting to file and improving code readability). Add in scrollbars
	  and start hooking up rulers and scrollbar to panning.

2007-12-11  Julian Lamb
	* src/callbacks.c,src/interface,src/render.c: Get drag and drop working
	  for layer sidebar. Fix memory leak for cairo rendering.

2007-12-10  Julian Lamb
	* src/gerbv.c,src/callbacks.c,others: Get basic layer management gui up
	  and running. This includes visibility toggling, color picking, and basic
	  row management using the buttons at the bottom. A popup menu will also
	  be added when the user right clicks.
	* src/gerber.c: Fix polygon rendering bug (bug #1190809). This was due